<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ramHacks.docr.AccountSelectActivity" >

    
    <TextView
        android:id="@+id/acctText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/accountSetup" />
   	
    <Button
   	    android:id="@+id/dropboxSetUp"
   	    android:layout_width="170dp"
   	    android:layout_height="50dp"
   	    android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/acctText"
        android:layout_marginTop="80dp"
   	    android:onClick="dropBoxAcct"
   	    android:text="@string/dropboxSetup" />
    
    <Button
   	    android:id="@+id/dropboxClear"
   	    android:layout_width="170dp"
   	    android:layout_height="50dp"
   	    android:layout_toEndOf="@+id/dropboxSetUp"
   	    android:layout_toRightOf="@+id/dropboxSetUp"
        android:layout_below="@+id/acctText"
        android:layout_marginTop="80dp"
   	    android:onClick="dropBoxClear"
   	    android:text="@string/dropboxReset" />
    
   	<Button
   	    android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dropboxSetUp"
        android:id="@+id/ftpSetUp"
        android:text="@string/ftpSetup"
        android:onClick="ftpAcct"
        />
   	
   	<Button
   	    android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/ftpSetUp"
   	    android:layout_toRightOf="@+id/ftpSetUp"
   	    android:layout_below="@+id/dropboxClear"
        android:id="@+id/ftpClear"
        android:text="@string/ftpReset"
        android:onClick="ftpClear"
        />
   	
   	<Button
   	    android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/ProceedToSend"
        android:text="@string/proceed"
        android:onClick="sendText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        />

   	

</RelativeLayout>
