<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ramHacks.docr.FTPInfoActivity" >

    <EditText
	    android:id="@+id/ftp_address"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/ftpserver_hint"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
	    android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
	    android:inputType="text" />
    
    <EditText
	    android:id="@+id/ftpacct_name"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/ftpname_hint"
        android:layout_below="@+id/ftp_address"
	    android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
	    android:inputType="text" />
    
    <EditText
	    android:id="@+id/ftpacct_pw"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/ftppw_hint"
	    android:layout_below="@+id/ftpacct_name"
	    android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
	    android:inputType="text" />
    
    <Button
        android:layout_width="170dp"
        android:layout_height="50dp"
	    android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:id="@+id/ftpProcess"
        android:text="@string/ftpGet"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">
    </Button>
    
    

</RelativeLayout>
